# mini_browser

./: CMakeLists.txt  README.ko.md  README.md
include/: browser_widget.h  html_tokenizer.h  node.h  token.h
include/css/: apply_style.h  computed_style.h  css_parser.h  layout_tree.h  style_applier.h
include/gui/: header.h  main_window.h  renderer.h
include/rendering/: browser_widget.h
src/css/: apply_style.cpp  computed_style.cpp  css_parser.cpp  layout_tree.cpp  style_applier.cpp
src/gui/: header.cpp  main_window.cpp  renderer.cpp
src/html/: html_parser.cpp  node.cpp
src/parsing/: html_parser.cpp  html_tokenizer.cpp  node.cpp
src/rendering/: browser_widget.cpp
test/: CMakeLists.txt  parser_test.cpp  renderer_test.cpp
